kubernetes/express-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: express-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
  - port: 5000
    targetPort: 5000
